// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="sc-fWCJzd jLnzvM"
>
  <h1
    class="sc-dvQaRk lkiBUN"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-TBWPX dboksb"
  >
    <li
      class="sc-jOxtWs iKejsJ"
    >
      <img
        class="sc-ZOtfp cvILtQ"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="sc-jIkXHa iMlxxB"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="sc-fWCJzd jLnzvM"
>
  <h1
    class="sc-dvQaRk lkiBUN"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-TBWPX dboksb"
  >
    <li
      class="sc-jOxtWs iKejsJ"
    >
      <img
        class="sc-ZOtfp cvILtQ"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="sc-jIkXHa iMlxxB"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
